Fix another couple contrast issues

--- a/src/css/layout/sidebar.css
+++ b/src/css/layout/sidebar.css
@@ -12,7 +12,7 @@ nav {
   }
 
   li.active > a {
-    @apply text-pos-blue;
+    @apply font-semibold text-pos-darkblue;
   }
 
   li.active .submenu {
